@@ -3,11 +3,12 @@ package mycellar;
 import javax.swing.filechooser.FileFilter;
 import java.io.File;
 import java.util.List;
-import java.util.stream.Collectors;
 
+import static java.util.stream.Collectors.toList;
 import static mycellar.ProgramConstants.CHAR_DOT;
 import static mycellar.ProgramConstants.ONE_DOT;
 import static mycellar.core.text.MyCellarLabelManagement.getLabel;
+import static mycellar.general.ResourceKey.*;
 
 /**
  * Titre : Cave &agrave; vin
@@ -16,30 +17,30 @@ import static mycellar.core.text.MyCellarLabelManagement.getLabel;
  * Soci&eacute;t&eacute; : Seb Informatique
  *
  * @author S&eacute;bastien Duch&eacute;
- * @version 1.1
- * @since 10/06/22
+ * @version 1.2
+ * @since 13/03/25
  */
 
 public class Filtre extends FileFilter {
 
   public static final String EXTENSION_SINFO = "sinfo";
-  public static final String EXTENSION_XLS = "xls";
-  public static final String EXTENSION_XLSX = "xlsx";
-  public static final String EXTENSION_ODS = "ods";
-  public static final String EXTENSION_HTML = "html";
+  private static final String EXTENSION_XLS = "xls";
+  private static final String EXTENSION_XLSX = "xlsx";
+  private static final String EXTENSION_ODS = "ods";
+  private static final String EXTENSION_HTML = "html";
   public static final String EXTENSION_XML = "xml";
-  public static final String EXTENSION_PDF = "pdf";
-  public static final String EXTENSION_CSV = "csv";
-  public static final String EXTENSION_TXT = "txt";
-  public static final Filtre FILTRE_SINFO = new Filtre(EXTENSION_SINFO, getLabel("Filter.Sinfo"));
-  public static final Filtre FILTRE_XLS = new Filtre(EXTENSION_XLS, getLabel("Filter.Xls"));
-  public static final Filtre FILTRE_XLSX = new Filtre(EXTENSION_XLSX, getLabel("Filter.Xls"));
-  public static final Filtre FILTRE_ODS = new Filtre(EXTENSION_ODS, getLabel("Filter.Ods"));
-  public static final Filtre FILTRE_HTML = new Filtre(EXTENSION_HTML, getLabel("Filter.Html"));
-  public static final Filtre FILTRE_XML = new Filtre(EXTENSION_XML, getLabel("Filter.Xml"));
-  public static final Filtre FILTRE_PDF = new Filtre(EXTENSION_PDF, getLabel("Filter.Pdf"));
-  public static final Filtre FILTRE_CSV = new Filtre(EXTENSION_CSV, getLabel("Filter.Csv"));
-  public static final Filtre FILTRE_TXT = new Filtre(EXTENSION_TXT, getLabel("Filter.Txt"));
+  private static final String EXTENSION_PDF = "pdf";
+  private static final String EXTENSION_CSV = "csv";
+  private static final String EXTENSION_TXT = "txt";
+  public static final Filtre FILTRE_SINFO = new Filtre(EXTENSION_SINFO, getLabel(FILTER_SINFO));
+  public static final Filtre FILTRE_XLS = new Filtre(EXTENSION_XLS, getLabel(FILTER_XLS));
+  public static final Filtre FILTRE_XLSX = new Filtre(EXTENSION_XLSX, getLabel(FILTER_XLS));
+  public static final Filtre FILTRE_ODS = new Filtre(EXTENSION_ODS, getLabel(FILTER_ODS));
+  public static final Filtre FILTRE_HTML = new Filtre(EXTENSION_HTML, getLabel(FILTER_HTML));
+  public static final Filtre FILTRE_XML = new Filtre(EXTENSION_XML, getLabel(FILTER_XML));
+  public static final Filtre FILTRE_PDF = new Filtre(EXTENSION_PDF, getLabel(FILTER_PDF));
+  public static final Filtre FILTRE_CSV = new Filtre(EXTENSION_CSV, getLabel(FILTER_CSV));
+  public static final Filtre FILTRE_TXT = new Filtre(EXTENSION_TXT, getLabel(FILTER_TXT));
 
   private final List<String> suffixes;
   private final String description;
@@ -47,7 +48,7 @@ public class Filtre extends FileFilter {
   public Filtre(List<String> suffixes, String description) {
     this.suffixes = suffixes.stream()
         .map(String::toLowerCase)
-        .collect(Collectors.toList());
+        .collect(toList());
     this.description = description;
   }
 
@@ -76,7 +77,7 @@ public class Filtre extends FileFilter {
   }
 
   public String toString() {
-    return ONE_DOT + suffixes.get(0);
+    return ONE_DOT + suffixes.getFirst();
   }
 
 }
